@@ -15,13 +15,16 @@
 
 
 ## From Matrix package [ ~/R/Pkgs/Matrix/R/Auxiliaries.R ]
-chk.s <- function(..., which.call = -1) {
-    if(nx <- length(list(...)))
+chk.s <- function(..., which.call = -1,
+		  depCtrl = if(exists("..deparseOpts")) "niceNames")
+{
+    if(nx <- ...length())
 	warning(sprintf(ngettext(nx,
                                  "extra argument %s will be disregarded in\n %s",
                                  "extra arguments %s will be disregarded in\n %s"),
-                        sub(")$", '', sub("^list\\(", '', deparse(list(...), control=c()))),
-                        deparse(sys.call(which.call), control=c())),
+                        sub(")$", '', sub("^list\\(", '',
+                                          deparse1(list(...), control=depCtrl))),
+                        deparse1(sys.call(which.call), control=depCtrl)),
                 call. = FALSE, domain=NA)
 }
 
